Minor bug fix on reviews, improved resopnsiveness on mobile.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,9 +10,16 @@
     color: black;
     height: 300px;
 }
+.content {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+}
 .subcontent{
     background-color: #d1d194;
     color: black;
+    font-size: 0.8em;
+    min-height: 50px;
 }
 .secondary {
     background-color: #3F51B5;
